<resources>
    //Base
    <string name="app_name">Telegram</string>

    //User
    <string name="default_username">Jemandandere</string>
    <string name="default_phone_number">+79050904050</string>
    <string name="default_login">/@JemandAndere</string>
    <string name="default_status">В сети</string>
    <string name="default_bio">О себе</string>

    // Menu
    <string name="create_group">Создать группу</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_secret_chat">Создать секретный чат</string>
    <string name="create_channel">Создать канал</string>
    <string name="contacts">Контакты</string>
    <string name="calls">Звонки</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="invite">Пригласить друзей</string>
    <string name="help">Вопросы о телеграм</string>

    // Settings
    <string name="account">Аккаунт</string>
    <string name="settings_label_phone_number">Нажмите, что бы изменить номер телефона</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="default_secure_code">184970</string>
    <string name="cd_register_image">register image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_send_sms">Мы отправили СМС с кодом проверки на ваш телефон</string>
    <string name="register_hint">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
</resources>